Estructura + Barra de navegación incompleta

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>título</title>
-    <link rel="stylesheet" type="text/css" href="styles.css"> //Vínculo CSS
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 
@@ -13,9 +13,13 @@
 
 <header class="container-nav">
     <nav class="navbar" role="navigation">
-        <a href="index.html" class="brand">Nectar</a>
+        <a id="inicio" href="index.html" class="brand">Nectar</a>
         <ul class="nav-links">
-    
+            <li><a href="herramientas.html">Herramientas</a></li>
+            <li><a href="material.html">Material</a></li>
+            <li><a href="ayudante.html">Ayudante</a></li>
+            <li><a href="proximamente.html">Próximamente</a></li>
+            <li><a href="nosotros.html">Sobre nosotros</a></li>
         </ul>
         <button class="button-menu-toggle">Menú</button>
     </nav>
@@ -23,7 +27,7 @@
 
 <main>
     <div class="container">
-        <h1>Título</h1>
+        <h1>Nectar</h1>
         <section>
         </section>
     </div>
@@ -35,5 +39,5 @@
 </body>
 
                               
-<script src="script.js"></script> //Vínculo JS
+<script src="script.js"></script>
 </html>
