--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>título</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cygnus Argo</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
+    <div class="breakpoint">
+        <div class="navbar">
+            <img src="imagesAndIcons/CygnusArgo_Logo_blanco.png" class="logo">
+            <button type="button">Regístrate</button>
+        </div>
+        <div class="content">
+            <small>Bienvenido a</small>
+            <h1>Nuestro<br>Mundo De Ideas</h1>
+            <button type="button">Toma un tour</button>
+        </div>
 
-<header class="container-nav">
-    <nav class="navbar" role="navigation">
-        <a id="inicio" href="index.html" class="brand">Nectar</a>
-        <ul class="nav-links">
-            <li><a href="herramientas.html">Herramientas</a></li>
-            <li><a href="material.html">Material</a></li>
-            <li><a href="ayudante.html">Ayudante</a></li>
-            <li><a href="proximamente.html">Próximamente</a></li>
-            <li><a href="nosotros.html">Sobre nosotros</a></li>
-        </ul>
-        <button class="button-menu-toggle">Menú</button>
-    </nav>
-</header>
+        <div class="side-bar">
+            <img src="imagesAndIcons/menu.png" class="menu">
 
-<main>
-    <div class="container">
-        <h1>Nectar</h1>
-        <section>
-        </section>
+            <div class="social-links">
+                <img src="imagesAndIcons/discord.svg">
+                <img src="imagesAndIcons/twitter.svg">
+                <img src="imagesAndIcons/instagram.svg">
+                <img src="imagesAndIcons/reddit.svg">
+                <img src="imagesAndIcons/kofi.svg">
+            </div>
+
+            <div class="useful-links">
+                <img src="imagesAndIcons/share.svg">
+                <img src="imagesAndIcons/info.svg">
+            </div>
+        </div>
+
+        <div>
+            <div class="stars">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+                <img src="imagesAndIcons/star.svg">
+            </div>
+        </div>
     </div>
-</main>
-
-<footer>
-</footer>
-
 </body>
-
-                              
-<script src="script.js"></script>
 </html>
