--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="breakpoint">
         <div class="navbar">
             <img src="imagesAndIcons/CygnusArgo_Logo_blanco.png" class="logo">
-            <button type="button"><a href="../SignMecanism/sign_login.html">Iniciar sesión / Registrarse</a></button>
+            <button type="button"><a href="Nectar/SignMecanism/sign_login.html">Iniciar sesión / Registrarse</a></button>
         </div>
         <div class="content">
             <small>Bienvenido a</small>
